app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80         # Cluster içindeki port
    targetPort: 8080 # Pod'un dinlediği port
  type: LoadBalancer
